plugins/editorconfig/testData/org/editorconfig/language/parser/invalid/malformedCharclassWithoutEnd.editorconfig
[onetwo[three]
hello=world
one=two
